# Capstone3-StockPrediction

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 02 - DataWranglingAndEDA.ipynb  03-PreprocessingAndModel.ipynb
