[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "stock_prediction_system"
version = "0.0.1"
description = "The objective of this capstone project is to develop a predictive model using machine learning and deep learning algorithms to forecast the stock prices of Tesla, Nvidia, and AMD"
authors = [
  { name = "Mohsin Syed" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["stock_prediction_system"]
force_sort_within_sections = true
